# MCP

./: host.py  inspect_page.py  inspect_search.py  inspect_search_playwright.py  inspect_select_clickable.py  inspect_select_israel.py  inspect_select_visibility.py  pyproject.toml  test_full_flow.py  test_selection.py  weather_Israel.py
